# wammo

./: .gitignore  README.md  pyproject.toml
reports/: notepad_delta_probe_and_arms.md  notepad_final_authority_calibration.md  notepad_long_context_run.md  notepad_next_frame_baseline.md  onnx_export_status.md
specs/: cursor_world.json  notepad_desk.json
src/wammo/: __init__.py
src/wammo/cursor_world/: __init__.py  policies.py  sim.py
src/wammo/data/: generate.py  notepad.py
src/wammo/eval/: __init__.py  action_guidance_probe.py  analyze_notepad_run.py  autoregressive_ladder.py  calibrated_ladder.py  divergence_ladder.py  next_frame_baseline_rollouts.py  notepad_pixels.py  probe_notepad.py  probe_notepad_screen.py  stratify_notepad_hybrid_sigma.py  stratify_notepad_sigma.py
src/wammo/export/: __init__.py  onnx_notepad_hybrid.py
src/wammo/model/: dit.py  flow.py  tokenizer.py
src/wammo/notepad_desk/: __init__.py  font.py  policies.py  sim.py
src/wammo/train/: __init__.py  overfit_notepad_one.py  (+8 more)
tests/: test_cursor_world.py  test_divergence_ladder.py  test_flow.py  test_notepad_analysis.py  test_notepad_desk.py  test_notepad_training.py  test_probe_notepad.py  test_tokenizer.py  test_train_notepad.py  test_train_notepad_binned_delta.py  test_train_notepad_hybrid.py  test_train_notepad_hybrid_diff_candidate.py  test_train_notepad_next_frame_baseline.py  test_train_notepad_pure_inverse.py  test_train_notepad_representation_screen.py  test_training.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: main.ts  style.css
